cluster/core/networking-ingress/webhooks/reciever.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    haproxy-ingress-proxy.pfsense.org/enabled: "true"
    haproxy-ingress-proxy.pfsense.org/frontend: "https-443"
    haproxy-ingress-proxy.pfsense.org/backend: "nginx-443"
    #traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "flux-webhook.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - "flux-webhook.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN//./-}-tls"
